fix: overflow-x が重なっている

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,7 +50,6 @@
     background-color: #ffffeb;
     justify-content: space-around;
     min-width: 900px;
-    overflow-x: auto;
     @media screen and (max-width: 480px) {
       // min-width: initial;
       min-width: 480px;
